--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -52,9 +52,10 @@ jobs:
 
       - name: Post
         env:
-          X_CLIENT_ID: ${{ secrets.X_CLIENT_ID }}
-          X_REFRESH_TOKEN: ${{ secrets.X_REFRESH_TOKEN }}
-          X_REDIRECT_URI: ${{ secrets.X_REDIRECT_URI }}
+          X_API_KEY: ${{ secrets.X_API_KEY }}
+          X_API_SECRET: ${{ secrets.X_API_SECRET }}
+          X_ACCESS_TOKEN: ${{ secrets.X_ACCESS_TOKEN }}
+          X_ACCESS_TOKEN_SECRET: ${{ secrets.X_ACCESS_TOKEN_SECRET }}
           SLOT: ${{ steps.slot.outputs.slot }}
           DRY_RUN: ${{ github.event.inputs.dry_run || 'false' }}
           HASHTAG_MODE: "MAX"
